tests/paczka2/big_fuzzy/63264544.err
Error in line 11: dCagve5Z A531 29,24
Error in line 10: S957 A338 94,8
Error in line 5: qivkPuWg A531 22,2
Error in line 21: dCagve5Z A531 122,99
Error in line 6: dCagve5Z S727 30,2
Error in line 23: dCagve5Z A338 96,3
Error in line 41: S957 S727 66,9
Error in line 42: PNiZ2KWtA A338 90,4
Error in line 50: VNSTu5hD A531 46,4
Error in line 55: S957 A338 68,8
Error in line 61: qivkPuWg S957 85,0
Error in line 62: dCagve5Z S727 50,0
Error in line 75: aGFTY S957 71,3
Error in line 79: PNiZ2KWtA S957 30D,4
Error in line 77: aGFTY S727 33,0
Error in line 83: S957 S957 11,78
Error in line 74: VNSTu5hD S727 1,5
Error in line 92: PNiZ2KWtA A338 82,1
Error in line 102: PNiZ2KWtA S727 7,7
Error in line 106: PNiZ2KWtA A531 28,8
Error in line 116: 1FFEPq2wG S727 -3,3
Error in line 109: 1FFEPq2wG S727 455,1
Error in line 128: ?A53'
Error in line 118: PNiZ2KWtA A338 103,7
Error in line 139: VNSTu5hD A531 14,6
Error in line 135: PNiZ2KWtA A531 25,1
Error in line 154: VNSTu5hD A338 170,4
Error in line 153: PNiZ2KWtA S957 308,4
Error in line 157: VNSTu5hD A531 89,4
Error in line 167: VNSTu5hD S727 36,9
Error in line 175: aGFTY A338 0,2
Error in line 179: VNSTu5hD S957 79,1
Error in line 199: qivkPuWg S727 85,3
Error in line 218: dCagve5Z S957 84,0
Error in line 234: qivkPuWg S727 83,18
Error in line 222: 1FFEPq2wG A338 266,7
Error in line 231: qivkPuWg A531 96,9
Error in line 243: qivkPuWg S727 28,0
